// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete renders correctly 1`] = `
<div
  aria-hidden="true"
  class="autocompleteWrapper"
  role="presentation"
>
  <div
    class="root"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="autocompleteContent"
      >
        <div
          class="selectedWords"
        >
          <input
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:184px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    cat
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    dog
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    fish
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    home
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Autocomplete renders with a placeholder 1`] = `
<div
  aria-hidden="true"
  class="autocompleteWrapper"
  role="presentation"
>
  <div
    class="root"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="autocompleteContent"
      >
        <div
          class="selectedWords"
        >
          <input
            placeholder="Enter recovery phrase"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:184px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    cat
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    dog
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    fish
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    home
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Autocomplete renders with an error 1`] = `
<div
  aria-hidden="true"
  class="autocompleteWrapper"
  role="presentation"
>
  <div
    class="root errored"
  >
    <div
      class="error"
    >
      Your mnemonic phrase is incorrect
    </div>
    <div
      class="inputWrapper"
    >
      <div
        class="autocompleteContent errored"
      >
        <div
          class="selectedWords"
        >
          <input
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:184px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    cat
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    dog
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    fish
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    home
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Autocomplete renders with label 1`] = `
<div
  aria-hidden="true"
  class="autocompleteWrapper"
  role="presentation"
>
  <div
    class="root"
  >
    <label
      aria-hidden="true"
      class="label"
      role="presentation"
    >
      Enter your recovery phrase below
    </label>
    <div
      class="inputWrapper"
    >
      <div
        class="autocompleteContent"
      >
        <div
          class="selectedWords"
        >
          <input
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:184px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    cat
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    dog
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    fish
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    home
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Autocomplete uses render prop - renderOptions 1`] = `
<div
  aria-hidden="true"
  class="autocompleteWrapper"
  role="presentation"
>
  <div
    class="root"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="autocompleteContent"
      >
        <div
          class="selectedWords"
        >
          <input
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:184px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li>
                    <span>
                      #0: cat
                    </span>
                  </li>
                  <li>
                    <span>
                      #1: dog
                    </span>
                  </li>
                  <li>
                    <span>
                      #2: fish
                    </span>
                  </li>
                  <li>
                    <span>
                      #3: home
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Autocomplete uses render prop - renderSelections 1`] = `
<div
  aria-hidden="true"
  class="autocompleteWrapper"
  role="presentation"
>
  <div
    class="root"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="autocompleteContent"
      >
        <div
          class="selectedWords"
        >
          <input
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:184px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    cat
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    dog
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    fish
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    home
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;
